--- a/app/src/main/res/layout/dialog_fragment_finder.xml
+++ b/app/src/main/res/layout/dialog_fragment_finder.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="16dp"
     android:background="@color/colorPrimaryDark"
-    android:gravity="center_vertical">
+    android:gravity="center">
 
     <EditText
         android:background="@color/colorPrimary"
@@ -26,5 +27,13 @@
         android:theme="@style/AccentButton"
         android:layout_width="52dp"
         android:layout_height="52dp" />
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:visibility="gone"
+        android:id="@+id/loadingSkv"
+        style="@style/SpinKitView.Large.CubeGrid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:SpinKit_Color="@android:color/white" />
 
 </LinearLayout>
